bpo-44616: Mark all clean up instructions at end of named exception block as artificial (GH-27109)